@@ -69,6 +69,18 @@ public class PostMethodWebRequest extends MessageBodyWebRequest {
 
 
     /**
+     * Selects whether MIME-encoding will be used for this request. MIME-encoding changes the way the request is sent
+     * and is required for requests which include file parameters. This method may only be called for a request which
+     * was not created from a form.
+     **/
+    public void setMimeEncoded( boolean mimeEncoded )
+    {
+        if (isFormBased()) throw new IllegalStateException( "Encoding is defined by the form from which this request is derived." );
+        _mimeEncoded = mimeEncoded;
+    }
+
+
+    /**
      * Returns the HTTP method defined for this request.
      **/
     public String getMethod() {
@@ -103,6 +115,23 @@ public class PostMethodWebRequest extends MessageBodyWebRequest {
         super.selectFile( parameterName, fileName, inputStream, contentType );
 
         _files.put( parameterName, new UploadFileSpec( fileName, inputStream, contentType ) );
+    }
+
+
+    /**
+     * Returns true if selectFile may be called with this parameter.
+     */
+    protected boolean maySelectFile( String parameterName )
+    {
+        return !isFormBased() || super.isFileParameter( parameterName );
+    }
+
+
+    /**
+     * Returns true if this request is to be MIME-encoded.
+     **/
+    protected boolean isMimeEncoded() {
+        return isFormBased() ? super.isMimeEncoded() : _mimeEncoded;
     }
 
 
@@ -146,6 +175,8 @@ public class PostMethodWebRequest extends MessageBodyWebRequest {
     private InputStream _source;
     private MessageBody _body;
 
+    /** If true, non-form-based request will be MIME-encoded. **/
+    private boolean _mimeEncoded;
 
 }
 
